qt/gen_qsettings.h

class QSettings;
typedef struct QChildEvent QChildEvent;
typedef struct QEvent QEvent;
typedef struct QMetaMethod QMetaMethod;
typedef struct QMetaObject QMetaObject;
typedef struct QObject QObject;
typedef struct QSettings QSettings;
typedef struct QTextCodec QTextCodec;
typedef struct QTimerEvent QTimerEvent;
typedef struct QVariant QVariant;
QSettings* QSettings_new(struct miqt_string organization);
QSettings* QSettings_new2(int scope, struct miqt_string organization);
QSettings* QSettings_new3(int format, int scope, struct miqt_string organization);
QSettings* QSettings_new4(struct miqt_string fileName, int format);
QSettings* QSettings_new5();
QSettings* QSettings_new6(int scope);
QSettings* QSettings_new7(struct miqt_string organization, struct miqt_string application);
QSettings* QSettings_new8(struct miqt_string organization, struct miqt_string application, QObject* parent);
QSettings* QSettings_new9(int scope, struct miqt_string organization, struct miqt_string application);
QSettings* QSettings_new10(int scope, struct miqt_string organization, struct miqt_string application, QObject* parent);
QSettings* QSettings_new11(int format, int scope, struct miqt_string organization, struct miqt_string application);
QSettings* QSettings_new12(int format, int scope, struct miqt_string organization, struct miqt_string application, QObject* parent);
QSettings* QSettings_new13(struct miqt_string fileName, int format, QObject* parent);
QSettings* QSettings_new14(QObject* parent);
QSettings* QSettings_new15(int scope, QObject* parent);
QMetaObject* QSettings_metaObject(const QSettings* self);
void* QSettings_metacast(QSettings* self, const char* param1);
int QSettings_metacall(QSettings* self, int param1, int param2, void** param3);
struct miqt_string QSettings_tr(const char* s);
struct miqt_string QSettings_trUtf8(const char* s);
void QSettings_clear(QSettings* self);
void QSettings_sync(QSettings* self);
int QSettings_status(const QSettings* self);
bool QSettings_isAtomicSyncRequired(const QSettings* self);
void QSettings_setAtomicSyncRequired(QSettings* self, bool enable);
void QSettings_beginGroup(QSettings* self, struct miqt_string prefix);
void QSettings_endGroup(QSettings* self);
struct miqt_string QSettings_group(const QSettings* self);
int QSettings_beginReadArray(QSettings* self, struct miqt_string prefix);
void QSettings_beginWriteArray(QSettings* self, struct miqt_string prefix);
void QSettings_endArray(QSettings* self);
void QSettings_setArrayIndex(QSettings* self, int i);
struct miqt_array /* of struct miqt_string */  QSettings_allKeys(const QSettings* self);
struct miqt_array /* of struct miqt_string */  QSettings_childKeys(const QSettings* self);
struct miqt_array /* of struct miqt_string */  QSettings_childGroups(const QSettings* self);
bool QSettings_isWritable(const QSettings* self);
void QSettings_setValue(QSettings* self, struct miqt_string key, QVariant* value);
QVariant* QSettings_value(const QSettings* self, struct miqt_string key);
void QSettings_remove(QSettings* self, struct miqt_string key);
bool QSettings_contains(const QSettings* self, struct miqt_string key);
void QSettings_setFallbacksEnabled(QSettings* self, bool b);
bool QSettings_fallbacksEnabled(const QSettings* self);
struct miqt_string QSettings_fileName(const QSettings* self);
int QSettings_format(const QSettings* self);
int QSettings_scope(const QSettings* self);
struct miqt_string QSettings_organizationName(const QSettings* self);
struct miqt_string QSettings_applicationName(const QSettings* self);
void QSettings_setIniCodec(QSettings* self, QTextCodec* codec);
void QSettings_setIniCodecWithCodecName(QSettings* self, const char* codecName);
QTextCodec* QSettings_iniCodec(const QSettings* self);
void QSettings_setDefaultFormat(int format);
int QSettings_defaultFormat();
void QSettings_setSystemIniPath(struct miqt_string dir);
void QSettings_setUserIniPath(struct miqt_string dir);
void QSettings_setPath(int format, int scope, struct miqt_string path);
struct miqt_string QSettings_tr2(const char* s, const char* c);
struct miqt_string QSettings_tr3(const char* s, const char* c, int n);
struct miqt_string QSettings_trUtf82(const char* s, const char* c);
struct miqt_string QSettings_trUtf83(const char* s, const char* c, int n);
void QSettings_beginWriteArray2(QSettings* self, struct miqt_string prefix, int size);
QVariant* QSettings_value2(const QSettings* self, struct miqt_string key, QVariant* defaultValue);
bool QSettings_override_virtual_metaObject(void* self, intptr_t slot);
QMetaObject* QSettings_virtualbase_metaObject(const void* self);
bool QSettings_override_virtual_metacast(void* self, intptr_t slot);
void* QSettings_virtualbase_metacast(void* self, const char* param1);
bool QSettings_override_virtual_metacall(void* self, intptr_t slot);
int QSettings_virtualbase_metacall(void* self, int param1, int param2, void** param3);
bool QSettings_override_virtual_event(void* self, intptr_t slot);
bool QSettings_virtualbase_event(void* self, QEvent* event);
bool QSettings_override_virtual_eventFilter(void* self, intptr_t slot);
bool QSettings_virtualbase_eventFilter(void* self, QObject* watched, QEvent* event);
bool QSettings_override_virtual_timerEvent(void* self, intptr_t slot);
void QSettings_virtualbase_timerEvent(void* self, QTimerEvent* event);
bool QSettings_override_virtual_childEvent(void* self, intptr_t slot);
void QSettings_virtualbase_childEvent(void* self, QChildEvent* event);
bool QSettings_override_virtual_customEvent(void* self, intptr_t slot);
void QSettings_virtualbase_customEvent(void* self, QEvent* event);
bool QSettings_override_virtual_connectNotify(void* self, intptr_t slot);
void QSettings_virtualbase_connectNotify(void* self, QMetaMethod* signal);
bool QSettings_override_virtual_disconnectNotify(void* self, intptr_t slot);
void QSettings_virtualbase_disconnectNotify(void* self, QMetaMethod* signal);
const QMetaObject* QSettings_staticMetaObject();
void QSettings_delete(QSettings* self);