qt/gen_qsettings.nim

import Qt5Widgets_libs

{.push raises: [].}

from system/ansi_c import c_free

type
  struct_miqt_string {.used.} = object
    len: csize_t
    data: cstring

  struct_miqt_array {.used.} = object
    len: csize_t
    data: pointer

  struct_miqt_map {.used.} = object
    len: csize_t
    keys: pointer
    values: pointer

  miqt_uintptr_t {.importc: "uintptr_t", header: "stdint.h", used.} = uint
  miqt_intptr_t {.importc: "intptr_t", header: "stdint.h", used.} = int

func fromBytes(T: type string, v: openArray[byte]): string {.used.} =
  if v.len > 0:
    result = newString(v.len)
    when nimvm:
      for i, c in v:
        result[i] = cast[char](c)
    else:
      copyMem(addr result[0], unsafeAddr v[0], v.len)

const cflags = gorge("pkg-config -cflags Qt5Widgets")
{.compile("gen_qsettings.cpp", cflags).}


type QSettingsStatus* = cint
const
  QSettingsNoError* = 0
  QSettingsAccessError* = 1
  QSettingsFormatError* = 2



type QSettingsFormat* = cint
const
  QSettingsNativeFormat* = 0
  QSettingsIniFormat* = 1
  QSettingsInvalidFormat* = 16
  QSettingsCustomFormat1* = 17
  QSettingsCustomFormat2* = 18
  QSettingsCustomFormat3* = 19
  QSettingsCustomFormat4* = 20
  QSettingsCustomFormat5* = 21
  QSettingsCustomFormat6* = 22
  QSettingsCustomFormat7* = 23
  QSettingsCustomFormat8* = 24
  QSettingsCustomFormat9* = 25
  QSettingsCustomFormat10* = 26
  QSettingsCustomFormat11* = 27
  QSettingsCustomFormat12* = 28
  QSettingsCustomFormat13* = 29
  QSettingsCustomFormat14* = 30
  QSettingsCustomFormat15* = 31
  QSettingsCustomFormat16* = 32



type QSettingsScope* = cint
const
  QSettingsUserScope* = 0
  QSettingsSystemScope* = 1



import gen_qsettings_types
export gen_qsettings_types

import
  gen_qcoreevent,
  gen_qmetaobject,
  gen_qobject,
  gen_qobjectdefs,
  gen_qtextcodec,
  gen_qvariant
export
  gen_qcoreevent,
  gen_qmetaobject,
  gen_qobject,
  gen_qobjectdefs,
  gen_qtextcodec,
  gen_qvariant

type cQSettings*{.exportc: "QSettings", incompleteStruct.} = object

proc fcQSettings_new(organization: struct_miqt_string): ptr cQSettings {.importc: "QSettings_new".}
proc fcQSettings_new2(scope: cint, organization: struct_miqt_string): ptr cQSettings {.importc: "QSettings_new2".}
proc fcQSettings_new3(format: cint, scope: cint, organization: struct_miqt_string): ptr cQSettings {.importc: "QSettings_new3".}
proc fcQSettings_new4(fileName: struct_miqt_string, format: cint): ptr cQSettings {.importc: "QSettings_new4".}
proc fcQSettings_new5(): ptr cQSettings {.importc: "QSettings_new5".}
proc fcQSettings_new6(scope: cint): ptr cQSettings {.importc: "QSettings_new6".}
proc fcQSettings_new7(organization: struct_miqt_string, application: struct_miqt_string): ptr cQSettings {.importc: "QSettings_new7".}
proc fcQSettings_new8(organization: struct_miqt_string, application: struct_miqt_string, parent: pointer): ptr cQSettings {.importc: "QSettings_new8".}
proc fcQSettings_new9(scope: cint, organization: struct_miqt_string, application: struct_miqt_string): ptr cQSettings {.importc: "QSettings_new9".}
proc fcQSettings_new10(scope: cint, organization: struct_miqt_string, application: struct_miqt_string, parent: pointer): ptr cQSettings {.importc: "QSettings_new10".}
proc fcQSettings_new11(format: cint, scope: cint, organization: struct_miqt_string, application: struct_miqt_string): ptr cQSettings {.importc: "QSettings_new11".}
proc fcQSettings_new12(format: cint, scope: cint, organization: struct_miqt_string, application: struct_miqt_string, parent: pointer): ptr cQSettings {.importc: "QSettings_new12".}
proc fcQSettings_new13(fileName: struct_miqt_string, format: cint, parent: pointer): ptr cQSettings {.importc: "QSettings_new13".}
proc fcQSettings_new14(parent: pointer): ptr cQSettings {.importc: "QSettings_new14".}
proc fcQSettings_new15(scope: cint, parent: pointer): ptr cQSettings {.importc: "QSettings_new15".}
proc fcQSettings_metaObject(self: pointer, ): pointer {.importc: "QSettings_metaObject".}
proc fcQSettings_metacast(self: pointer, param1: cstring): pointer {.importc: "QSettings_metacast".}
proc fcQSettings_metacall(self: pointer, param1: cint, param2: cint, param3: pointer): cint {.importc: "QSettings_metacall".}
proc fcQSettings_tr(s: cstring): struct_miqt_string {.importc: "QSettings_tr".}
proc fcQSettings_trUtf8(s: cstring): struct_miqt_string {.importc: "QSettings_trUtf8".}
proc fcQSettings_clear(self: pointer, ): void {.importc: "QSettings_clear".}
proc fcQSettings_sync(self: pointer, ): void {.importc: "QSettings_sync".}
proc fcQSettings_status(self: pointer, ): cint {.importc: "QSettings_status".}
proc fcQSettings_isAtomicSyncRequired(self: pointer, ): bool {.importc: "QSettings_isAtomicSyncRequired".}
proc fcQSettings_setAtomicSyncRequired(self: pointer, enable: bool): void {.importc: "QSettings_setAtomicSyncRequired".}
proc fcQSettings_beginGroup(self: pointer, prefix: struct_miqt_string): void {.importc: "QSettings_beginGroup".}
proc fcQSettings_endGroup(self: pointer, ): void {.importc: "QSettings_endGroup".}
proc fcQSettings_group(self: pointer, ): struct_miqt_string {.importc: "QSettings_group".}
proc fcQSettings_beginReadArray(self: pointer, prefix: struct_miqt_string): cint {.importc: "QSettings_beginReadArray".}
proc fcQSettings_beginWriteArray(self: pointer, prefix: struct_miqt_string): void {.importc: "QSettings_beginWriteArray".}
proc fcQSettings_endArray(self: pointer, ): void {.importc: "QSettings_endArray".}
proc fcQSettings_setArrayIndex(self: pointer, i: cint): void {.importc: "QSettings_setArrayIndex".}
proc fcQSettings_allKeys(self: pointer, ): struct_miqt_array {.importc: "QSettings_allKeys".}
proc fcQSettings_childKeys(self: pointer, ): struct_miqt_array {.importc: "QSettings_childKeys".}
proc fcQSettings_childGroups(self: pointer, ): struct_miqt_array {.importc: "QSettings_childGroups".}
proc fcQSettings_isWritable(self: pointer, ): bool {.importc: "QSettings_isWritable".}
proc fcQSettings_setValue(self: pointer, key: struct_miqt_string, value: pointer): void {.importc: "QSettings_setValue".}
proc fcQSettings_value(self: pointer, key: struct_miqt_string): pointer {.importc: "QSettings_value".}
proc fcQSettings_remove(self: pointer, key: struct_miqt_string): void {.importc: "QSettings_remove".}
proc fcQSettings_contains(self: pointer, key: struct_miqt_string): bool {.importc: "QSettings_contains".}
proc fcQSettings_setFallbacksEnabled(self: pointer, b: bool): void {.importc: "QSettings_setFallbacksEnabled".}
proc fcQSettings_fallbacksEnabled(self: pointer, ): bool {.importc: "QSettings_fallbacksEnabled".}
proc fcQSettings_fileName(self: pointer, ): struct_miqt_string {.importc: "QSettings_fileName".}
proc fcQSettings_format(self: pointer, ): cint {.importc: "QSettings_format".}
proc fcQSettings_scope(self: pointer, ): cint {.importc: "QSettings_scope".}
proc fcQSettings_organizationName(self: pointer, ): struct_miqt_string {.importc: "QSettings_organizationName".}
proc fcQSettings_applicationName(self: pointer, ): struct_miqt_string {.importc: "QSettings_applicationName".}
proc fcQSettings_setIniCodec(self: pointer, codec: pointer): void {.importc: "QSettings_setIniCodec".}
proc fcQSettings_setIniCodecWithCodecName(self: pointer, codecName: cstring): void {.importc: "QSettings_setIniCodecWithCodecName".}
proc fcQSettings_iniCodec(self: pointer, ): pointer {.importc: "QSettings_iniCodec".}
proc fcQSettings_setDefaultFormat(format: cint): void {.importc: "QSettings_setDefaultFormat".}
proc fcQSettings_defaultFormat(): cint {.importc: "QSettings_defaultFormat".}
proc fcQSettings_setSystemIniPath(dir: struct_miqt_string): void {.importc: "QSettings_setSystemIniPath".}
proc fcQSettings_setUserIniPath(dir: struct_miqt_string): void {.importc: "QSettings_setUserIniPath".}
proc fcQSettings_setPath(format: cint, scope: cint, path: struct_miqt_string): void {.importc: "QSettings_setPath".}
proc fcQSettings_tr2(s: cstring, c: cstring): struct_miqt_string {.importc: "QSettings_tr2".}
proc fcQSettings_tr3(s: cstring, c: cstring, n: cint): struct_miqt_string {.importc: "QSettings_tr3".}
proc fcQSettings_trUtf82(s: cstring, c: cstring): struct_miqt_string {.importc: "QSettings_trUtf82".}
proc fcQSettings_trUtf83(s: cstring, c: cstring, n: cint): struct_miqt_string {.importc: "QSettings_trUtf83".}
proc fcQSettings_beginWriteArray2(self: pointer, prefix: struct_miqt_string, size: cint): void {.importc: "QSettings_beginWriteArray2".}
proc fcQSettings_value2(self: pointer, key: struct_miqt_string, defaultValue: pointer): pointer {.importc: "QSettings_value2".}
proc fQSettings_virtualbase_metaObject(self: pointer, ): pointer{.importc: "QSettings_virtualbase_metaObject".}
proc fcQSettings_override_virtual_metaObject(self: pointer, slot: int) {.importc: "QSettings_override_virtual_metaObject".}
proc fQSettings_virtualbase_metacast(self: pointer, param1: cstring): pointer{.importc: "QSettings_virtualbase_metacast".}
proc fcQSettings_override_virtual_metacast(self: pointer, slot: int) {.importc: "QSettings_override_virtual_metacast".}
proc fQSettings_virtualbase_metacall(self: pointer, param1: cint, param2: cint, param3: pointer): cint{.importc: "QSettings_virtualbase_metacall".}
proc fcQSettings_override_virtual_metacall(self: pointer, slot: int) {.importc: "QSettings_override_virtual_metacall".}
proc fQSettings_virtualbase_event(self: pointer, event: pointer): bool{.importc: "QSettings_virtualbase_event".}
proc fcQSettings_override_virtual_event(self: pointer, slot: int) {.importc: "QSettings_override_virtual_event".}
proc fQSettings_virtualbase_eventFilter(self: pointer, watched: pointer, event: pointer): bool{.importc: "QSettings_virtualbase_eventFilter".}
proc fcQSettings_override_virtual_eventFilter(self: pointer, slot: int) {.importc: "QSettings_override_virtual_eventFilter".}
proc fQSettings_virtualbase_timerEvent(self: pointer, event: pointer): void{.importc: "QSettings_virtualbase_timerEvent".}
proc fcQSettings_override_virtual_timerEvent(self: pointer, slot: int) {.importc: "QSettings_override_virtual_timerEvent".}
proc fQSettings_virtualbase_childEvent(self: pointer, event: pointer): void{.importc: "QSettings_virtualbase_childEvent".}
proc fcQSettings_override_virtual_childEvent(self: pointer, slot: int) {.importc: "QSettings_override_virtual_childEvent".}
proc fQSettings_virtualbase_customEvent(self: pointer, event: pointer): void{.importc: "QSettings_virtualbase_customEvent".}
proc fcQSettings_override_virtual_customEvent(self: pointer, slot: int) {.importc: "QSettings_override_virtual_customEvent".}
proc fQSettings_virtualbase_connectNotify(self: pointer, signal: pointer): void{.importc: "QSettings_virtualbase_connectNotify".}
proc fcQSettings_override_virtual_connectNotify(self: pointer, slot: int) {.importc: "QSettings_override_virtual_connectNotify".}
proc fQSettings_virtualbase_disconnectNotify(self: pointer, signal: pointer): void{.importc: "QSettings_virtualbase_disconnectNotify".}
proc fcQSettings_override_virtual_disconnectNotify(self: pointer, slot: int) {.importc: "QSettings_override_virtual_disconnectNotify".}
proc fcQSettings_staticMetaObject(): pointer {.importc: "QSettings_staticMetaObject".}
proc fcQSettings_delete(self: pointer) {.importc: "QSettings_delete".}


func init*(T: type QSettings, h: ptr cQSettings): QSettings =
  T(h: h)
proc create*(T: type QSettings, organization: string): QSettings =

  QSettings.init(fcQSettings_new(struct_miqt_string(data: organization, len: csize_t(len(organization)))))
proc create*(T: type QSettings, scope: QSettingsScope, organization: string): QSettings =

  QSettings.init(fcQSettings_new2(cint(scope), struct_miqt_string(data: organization, len: csize_t(len(organization)))))
proc create*(T: type QSettings, format: QSettingsFormat, scope: QSettingsScope, organization: string): QSettings =
